--- a/www/e_store_a.html
+++ b/www/e_store_a.html
@@ -18,18 +18,7 @@
             <a class="btn btn-primary btn-sm" id='login-btn' href="#" role="button">Login</a>
         </div>
 
-        <div class="controls">
-
-            <div class="input-group"> 
-                <input class="form-control" placeholder="Search for...">
-                <span class="input-group-btn"> 
-                    <button class="btn btn-default" type="button">Go!</button>
-                </span> 
-            </div>
-
-            <button type="button" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Check-out
-            </button>
+        <div class="controls" id='controls'>
 
         </div>
 
@@ -38,6 +27,7 @@
         </div>
 
         <div class="spacing-sm"></div>
+        
 
         <footer class="footer footer-height-sm">
             <div class="container">
