--- a/www/todo_list.html
+++ b/www/todo_list.html
@@ -8,6 +8,7 @@
         <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script-->
         <script src="js/jquery-1.9.1.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/todolist.js"></script>
         <!--script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script-->
     </head>
     <body>
@@ -42,64 +43,36 @@
 
         <div class="todo-list-content">
 
-            <div class="container">
+            <div class="container" id="container">
                 <div class="row todo-list-entry">
-                    <div class="col-sm-9">
-                       a
+
+                    <div class="col-sm-1">
+                        <input class="chkbox" type="checkbox" name="terms"/>
                     </div>
-                    <div class="col-sm-3">
-                        b
+                    <div class="col-sm-10 todo">
+                        Test 1
                     </div>
+                    <div class="col-sm-1 delete">
+                        <img src="images/delete.png">
+                    </div>
+
                 </div>
 
+            </div>
+
+            <div class="container" id="container">
                 <div class="row todo-list-entry">
-                    <div class="col-sm-9">
-                        a
+
+                    <div class="col-sm-1">
+                        <input class="chkbox" type="checkbox" name="terms"/>
+                    </div>
+                    <div class="col-sm-10 todo">
+                        Test 2
+                    </div>
+                    <div class="col-sm-1 delete">
+                        <img src="images/delete.png">
                     </div>
 
-                    <div class="col-sm-3">
-                        b
-                    </div>
-                </div>
-
-                <div class="row todo-list-entry">
-                    <div class="col-sm-9">
-                        a
-                    </div>
-
-                    <div class="col-sm-3">
-                        b
-                    </div>
-                </div>
-
-                <div class="row todo-list-entry">
-                    <div class="col-sm-9">
-                        a
-                    </div>
-
-                    <div class="col-sm-3">
-                        b
-                    </div>
-                </div>
-                
-                <div class="row todo-list-entry">
-                    <div class="col-sm-9">
-                        a
-                    </div>
-
-                    <div class="col-sm-3">
-                        b
-                    </div>
-                </div>
-                
-                <div class="row todo-list-entry">
-                    <div class="col-sm-9">
-                        a
-                    </div>
-
-                    <div class="col-sm-3">
-                        b
-                    </div>
                 </div>
 
             </div>
